Fix invalid config & build file